# sheepit-polyclient

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/client/: mod.rs
src/hardware/: mod.rs
src/hardware/cpu/: linux.rs
src/macros/: mod.rs
