[package]
name = "sheepit-polyclient"
version = "0.1.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
regex = "1.3.1"
reqwest = "0.10.0-alpha.2"
num_cpus = "1.11.1"
tracing = "0.1.10"
tracing-subscriber = "0.1.6"
structopt = "0.3.4"
